# post-paper

./: .editorconfig  .env  .gitignore  .prettierignore  .vercelignore  README.md  biome.json  build-project.sh  bun.lockb  database.types.ts  lint-staged.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  rome.json  tailwind.config.ts  tsconfig.json  types.next-auth.d.ts  validate-env-vars.mjs  validate-env-vars.ts  vercel.json
app/: globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  site-data.ts
components/: LogoutButton.tsx  avatar.tsx  brand-logo.tsx  copy-to-clipboard.tsx  footer.tsx  github-sign-in.tsx  icons.tsx  lenis-wrapper.tsx  like-button.tsx  likes.tsx  logout-button.tsx  mdx-editor.tsx  navbar.tsx  oauth-sign-in.tsx  page-margin.tsx  page-root.tsx  paper-card.tsx  prose-article.tsx  prose.tsx  render-paper.tsx  sign-buttons.tsx  sign-out.tsx  theme-provider.tsx  theme-toggle.tsx  user-actions.tsx
hooks/: use-client-user.tsx
lib/: hast-to-jsx.tsx  paper-parser.ts  timestamp-formatter.ts
markdown-parser/: Cargo.toml
markdown-parser-js/: bun.lockb  package.json
markdown-parser-rs/: .editorconfig  Cargo.toml
markdown-parser-rs/examples/: lib.rs
markdown-parser-rs/src/: lib.rs  main.rs
parcel-worker/: bun.lockb  package.json
public/: manifest.webmanifest
src/: auth.ts  middleware.ts  server-data.ts  validate-env-vars.ts
styles/: classic-dark.css  classic-light.css  editor.css  globals.css
supabase/: config.toml
types/: database.d.ts  database.ts  env-vars.d.ts  file-types.d.ts  next-auth.d.ts  (+1 more)
(+113 files in other folders)
