[package]
name = "markdown-parser-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Stumpf <s.dominik.work@gmail.com>"]
description = "Expose markdown parsing tools to WebAssembly."
repository = "https://github.com/dominik-stumpf/post-paper"
license = "MIT"

[dependencies]
markdown = { git = "https://github.com/dominik-stumpf/markdown-rs.git", branch = 'to_hast' }
mdxjs = "0.1.23"
serde_json = "1.0.113"
wasm-bindgen = "0.2.90"

[lib]
crate-type = ["cdylib", "rlib"]
