[package]
name = "markdown-parser"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Stumpf <s.dominik.work@gmail.com>"]
description = "Expose markdown parsing tools to WebAssembly."

[dependencies]
markdown = "1.0.0-alpha.16"
mdxjs = "0.1.23"
serde_json = "1.0.113"
wasm-bindgen = "0.2.90"

[lib]
crate-type = ["cdylib", "rlib"]
